--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URL = mongodb+srv://admin:ll090801@cluster0.poea1.mongodb.net/nodejs?retryWrites=true&w=majority
+SECRET_KEY = WFFWf15115U842UGUBWF81EE858UYBY51BGBJ5E51Q
