--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.0",
     "cjs-loader": "^0.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
